refactor: dto name
